--- a/NETResources/NETResources.csproj
+++ b/NETResources/NETResources.csproj
@@ -92,6 +92,7 @@
       <HintPath>..\..\..\monodevelop\main\build\AddIns\MonoDevelop.GtkCore\libstetic.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
