--- a/NETResources/NETResources.csproj
+++ b/NETResources/NETResources.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Gui\ResXEditorView.cs" />
     <Compile Include="Gui\ResXEditorWidget.cs" />
     <Compile Include="Gui\ResXObjectIconWidget.cs" />
+    <Compile Include="Model\IThumbnailProvider.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -141,5 +142,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Templates\ResXResourceFile.xft.xml" />
+    <None Include="..\README.md">
+      <Link>README.md</Link>
+    </None>
   </ItemGroup>
 </Project>
