String Editor: Zoom in on columns, more UI tuning
*Added zoom icon button beside each string resource value which opens
dialog to view / edit string.
*Slight amount of refactoring
*Improved selection highlighting of rows and add button action

--- a/NETResources/NETResources.csproj
+++ b/NETResources/NETResources.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Gui\ResXEditorWidget.cs" />
     <Compile Include="Gui\ResXObjectIconWidget.cs" />
     <Compile Include="Model\IThumbnailProvider.cs" />
+    <Compile Include="Gui\CellRendererButton.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
